# Online-Micro-Shop

./: .gitignore  alembic.ini  crud.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_01_06_2200-77dda4a2965b_create_table_products.py  2025_01_06_2248-4ddc5f6549ba_create_users_table.py  2025_01_07_1533-6205b79f1828_create_table_for_users_posts.py  2025_01_10_2045-46b162ea2e68_drop_profile_table.py  2025_01_10_2047-281c1ece480e_create_table_profile.py  2025_01_20_1543-c5899793b862_create_orders.py  2025_01_20_2034-35b3dd6586fd_create_order_product_association_table.py  2025_01_22_0926-b393c4049f3e_add_count_column_to_product_association_.py  2025_01_23_0823-9f73ae58ff03_create_column_unit_price_for_table_.py
api_v1/demo_auth/: demo_jwt_auth.py  helpers.py  validation.py  views.py
api_v1/products/: crud.py  schemas.py
auth/: README.md  utils.py
core/: config.py
core/models/: base.py  db_helper.py  order.py  order_product_association.py  post.py  product.py  profile.py  user.py
users/: schemas.py  views.py
