[tool.poetry]
name = "microshop"
version = "0.1.0"
description = ""
authors = ["Gabriel"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
aiosqlite = "^0.20.0"
pydantic-settings = "^2.7.0"
pydantic = {extras = ["email"], version = "^2.10.4"}
pylint = "^3.3.3"
alembic = "^1.14.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
